demo prepare