@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.lvivjavaclub</groupId>
@@ -17,9 +17,14 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.26</version>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20230618</version>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.6.0</version>
     </dependency>
   </dependencies>
   <build>
@@ -35,7 +40,6 @@
             <compilerArgs>
               <arg>--enable-preview</arg>
               <arg>--add-modules=jdk.incubator.vector</arg>
-              <arg>--add-modules=jdk.incubator.concurrent</arg>
               <arg>--add-modules=java.base</arg>
               <arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>
             </compilerArgs>
